tests/bad/testfile-duplicate-attrib.go
package main
type T struct { x,x int }
func main() {}
